# randombmir

./: .gitignore  README.md  README_backup.md  README_transcription.md  apply_titles.py  edit_title_files.py  package-lock.json  package.json  pyproject.toml  requirements.txt  style.css  test_refused_titles.json  test_refused_titles.py  test_titles.py  test_transcriptions.json  transcriptions.json  tsconfig.json  update_html_structure.py
audio_backup/: backup_manifest.txt
audio_files/: 01+boundaries.title  01+boundaries.txt  01+chiptune.title  01+chiptune.txt  01+secret.title  01+secret.txt  01+trans.title  01+trans.txt  02+butt.title  02+butt.txt  02+horny.title  02+horny.txt  02+potty+appocalipse.title  02+potty+appocalipse.txt  02+vip.title  02+vip.txt  03+dodgeball.title  03+dodgeball.txt  03+gate+time+1.title  03+gate+time+1.txt  03+native.title  03+native.txt  03+watertruck.title  03+watertruck.txt  04+BRCI.title  04+BRCI.txt  04+bored.title  04+bored.txt  04+fuel.title  04+fuel.txt  04b+death.title  04b+death.txt  05+fire+safety.title  05+fire+safety.txt  05+prank+2.title  05+prank+2.txt  05+sex.title  05+sex.txt  05+stripey.title  05+stripey.txt  (+300 more)
bmir-audio-player/: .gitignore  README.md  package-lock.json  package.json  transcriptions.json
bmir-audio-player/src/app/: layout.tsx  page.tsx
bmir-audio-player/src/app/api/player-state/: route.ts
bmir-audio-player/src/app/api/transcript/: route.ts
bmir-audio-player/src/app/ckdb/: page.tsx
bmir-audio-player/src/components/: BrowserAudioPlayer.tsx  SimpleAudioPlayer.tsx
bmir-audio-player/src/types/: audio.ts
legacy_main/: index.html
scripts/: import-audio-data.ts  load-audio-metadata.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: BrowserAudioPlayer.tsx  FireproofAudioPlayer.tsx  NewFireproofPlayer.tsx
src/lib/: audio-db.ts
src/randombmir_audio_tools/: __init__.py  download_backup.py  transcribe_audio.py  transcribe_audio_local.py
src/types/: audio.ts
